--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 <div class="carousel-caption">
                                     <h2>Ремонт мобильных устройств</h2>
                                     <ul class="list-inline list-unstyled">
-                                        <li>стоимость от 500 <i class="fa fa-rouble"></i></li>
+                                        <li>стоимость от 60 MDL</li>
                                         <li>срок от 2 часов </li>
                                     </ul>
                                     <p>
@@ -159,7 +159,7 @@
                                 <div class="carousel-caption">
                                     <h2>Ремонт ноутбуков</h2>
                                     <ul class="list-inline list-unstyled">
-                                        <li>стоимость от 500 <i class="fa fa-rouble"></i></li>
+                                        <li>стоимость от 100 MDL</i></li>
                                         <li>срок от 2 часов</li>
                                     </ul>
                                     <p>Наши специалисты быстро и качественно найдут поломку в ноутбуке и устранят её. 
@@ -182,7 +182,7 @@
                                 <div class="carousel-caption">
                                     <h2>Ремонт техники Apple</h2>
                                     <ul class="list-inline list-unstyled">
-                                        <li>стоимость от 500 <i class="fa fa-rouble"></i></li>
+                                        <li>стоимость от 100 MDL</i></li>
                                         <li>срок от 2 часов</li>
                                     </ul>
                                     <p>Большой опыт в ремонте Iphone и Ipad. 
@@ -204,7 +204,7 @@
                                 <div class="carousel-caption">
                                     <h2>Ремонт оргтехники</h2>
                                     <ul class="list-inline list-unstyled">
-                                        <li>стоимость от 500 <i class="fa fa-rouble"></i></li>
+                                        <li>стоимость от 100 MDL</i></li>
                                         <li>срок от 2 часов</li>
                                     </ul>
                                     <p>
