--- a/remont-apple.html
+++ b/remont-apple.html
@@ -133,7 +133,7 @@
                                 <div class="carousel-caption">
                                     <h2>Ремонт клавиатуры</h2>
                                     <ul class="list-inline list-unstyled">
-                                        <li>стоимость работы от 1000 <i class="fa fa-rouble"></i></li>
+                                        <li>стоимость работы от 300 MDL</li>
                                         <li>время ремонта от 1 часа</li>
                                     </ul>
                                     <p>
@@ -154,8 +154,8 @@
                                 <div class="carousel-caption">
                                     <h2>Замена дисплея</h2>
                                     <ul class="list-inline list-unstyled">
-                                        <li>стоимость работы от 1000 <i class="fa fa-rouble"></i></li>
-                                        <li>стоимость запчасти от 5000 <i class="fa fa-rouble"></i></li>
+                                        <li>стоимость работы от 300 MDL</li>
+                                        <li>стоимость запчасти от 1500 MDL</li>
                                         <li>время ремонта от 3 часов</li>
                                     </ul>
                                     <p>
@@ -175,8 +175,8 @@
                                 <div class="carousel-caption">
                                     <h2>Замена аккумуляторов</h2>
                                     <ul class="list-inline list-unstyled">
-                                        <li>стоимость работы от 1500 <i class="fa fa-rouble"></i></li>
-                                        <li>стоимость запчасти от 1500 <i class="fa fa-rouble"></i></li>
+                                        <li>стоимость работы от 500 MDL</li>
+                                        <li>стоимость запчасти от 500 MDL</li>
                                         <li>время ремонта от 2 часов</li>
                                     </ul>
                                     <p>
@@ -269,7 +269,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>100</span> <i class="fa fa-rouble"></i>.
+                                                от <span>30</span> MDL.
                                             </td>
                                         </tr>
                                     </table>
@@ -316,7 +316,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>1000</span> <i class="fa fa-rouble"></i>.
+                                                от <span>300</span> MDL.
                                             </td>
                                         </tr>
                                         <tr>
@@ -324,7 +324,7 @@
                                                 Стоимость запчастей
                                             </td>
                                             <td class = "time_service second_time_service">
-                                                от 5000 <i class="fa fa-rouble"></i>.
+                                                от 1500 MDL.
                                             </td>
                                         </tr>
                                     </table>
@@ -363,7 +363,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>300</span> <i class="fa fa-rouble"></i>.
+                                                от <span>100</span> MDL.
                                             </td>
                                         </tr>
                                         <tr>
@@ -371,7 +371,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>1500</span> <i class="fa fa-rouble"></i>.
+                                                от <span>500</span> MDL.
                                             </td>
                                         </tr>
                                         <tr>
@@ -379,7 +379,7 @@
                                                 Стоимость запчастей
                                             </td>
                                             <td class = "time_service second_time_service">
-                                                от 1500 <i class="fa fa-rouble"></i>.
+                                                от 500 MDL.
                                             </td>
                                         </tr>
                                     </table>
@@ -425,7 +425,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>1000</span> <i class="fa fa-rouble"></i>.
+                                                от <span>300</span> MDL.
                                             </td>
                                         </tr>
                                     </table>
@@ -470,7 +470,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>2500</span> <i class="fa fa-rouble"></i>.
+                                                от <span>800</span> MDL.
                                             </td>
                                         </tr>
                                     </table>
@@ -514,7 +514,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>4500</span> <i class="fa fa-rouble"></i>.
+                                                от <span>1500</span> MDL.
                                             </td>
                                         </tr>
                                         <tr>
@@ -522,7 +522,7 @@
                                                 Стоимость запчастей
                                             </td>
                                             <td class = "time_service second_time_service">
-                                                от 2500 <i class="fa fa-rouble"></i>.
+                                                от 800 MDL.
                                             </td>
                                         </tr>
                                     </table>
