--- a/remont-mobilnyh.html
+++ b/remont-mobilnyh.html
@@ -132,8 +132,8 @@
                                 <div class="carousel-caption">
                                     <h2>Замена дисплея</h2>
                                     <ul class="list-inline list-unstyled">
-                                        <li>стоимость от 500 <i class="fa fa-rouble"></i></li>
-                                        <li>стоимость запчасти от 500 <i class="fa fa-rouble"></i></li>
+                                        <li>стоимость от 150 MDL</li>
+                                        <li>стоимость запчасти от 150 MDL</li>
                                         <li>время ремонта от 3 часов</li>
                                     </ul>
                                     <p>
@@ -153,7 +153,7 @@
                                 <div class="carousel-caption">
                                     <h2>Замена разъёмов</h2>
                                     <ul class="list-inline list-unstyled">
-                                        <li>стоимость от 1200 <i class="fa fa-rouble"></i></li>
+                                        <li>стоимость от 400 MDL</li>
                                         <li>время ремонта от 1 часа</li>
                                     </ul>
                                     <p>
@@ -173,8 +173,8 @@
                                 <div class="carousel-caption">
                                     <h2>Замена динамика и микрофона</h2>
                                     <ul class="list-inline list-unstyled">
-                                        <li>стоимость от 800 <i class="fa fa-rouble"></i></li>
-                                        <li>стоимость запчастей от 600 р. <i class="fa fa-rouble"></i></li>
+                                        <li>стоимость от 250 MDL</li>
+                                        <li>стоимость запчастей от 200 MDL</li>
                                         <li>время ремонта от 1,5 часов</li>
                                     </ul>
                                     <p>
@@ -278,7 +278,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>2500</span> <i class="fa fa-rouble"></i>.
+                                                от <span>800</span> MDL.
                                             </td>
                                         </tr>
                                         <tr>
@@ -286,7 +286,7 @@
                                                 Стоимость запчастей
                                             </td>
                                             <td class = "time_service second_time_service">
-                                                от 500 <i class="fa fa-rouble"></i>.
+                                                от 150 MDL.
                                             </td>
                                         </tr>
                                     </table>
@@ -335,7 +335,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>1200</span> <i class="fa fa-rouble"></i>.
+                                                от <span>400</span> MDL.
                                             </td>
                                         </tr>
                                     </table>
@@ -384,7 +384,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>800</span> <i class="fa fa-rouble"></i>.
+                                                от <span>250</span> MDL.
                                             </td>
                                         </tr>
                                         <tr>
@@ -392,7 +392,7 @@
                                                 Стоимость запчастей
                                             </td>
                                             <td class = "time_service second_time_service">
-                                                от 600 <i class="fa fa-rouble"></i>.
+                                                от 200 MDL.
                                             </td>
                                         </tr>
                                     </table>
@@ -441,7 +441,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>1200</span> <i class="fa fa-rouble"></i>.
+                                                от <span>400</span> MDL.
                                             </td>
                                         </tr>
                                     </table>
@@ -485,7 +485,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>800</span> <i class="fa fa-rouble"></i>.
+                                                от <span>250</span> MDL.
                                             </td>
                                         </tr>
                                     </table>
@@ -532,7 +532,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>1600</span> <i class="fa fa-rouble"></i>.
+                                                от <span>500</span> MDL.
                                             </td>
                                         </tr>
                                         <tr>
@@ -540,7 +540,7 @@
                                                 Стоимость запчастей
                                             </td>
                                             <td class = "time_service second_time_service">
-                                                от 600 <i class="fa fa-rouble"></i>.
+                                                от 200 MDL.
                                             </td>
                                         </tr>
                                     </table>
@@ -583,7 +583,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>1600</span> <i class="fa fa-rouble"></i>.
+                                                от <span>500</span> MDL.
                                             </td>
                                         </tr>
                                         <tr>
@@ -591,7 +591,7 @@
                                                 Стоимость запчастей
                                             </td>
                                             <td class = "time_service second_time_service">
-                                                от 600 <i class="fa fa-rouble"></i>.
+                                                от 200 MDL.
                                             </td>
                                         </tr>
                                     </table>
