--- a/remont-noutbukov.html
+++ b/remont-noutbukov.html
@@ -133,8 +133,8 @@
                                 <div class="carousel-caption">
                                     <h2>Замена матрицы</h2>
                                     <ul class="list-inline list-unstyled">
-                                        <li>стоимость работы от 1200 <i class="fa fa-rouble"></i></li>
-                                        <li>стоимость матрицы от 3500 <i class="fa fa-rouble"></i></li>
+                                        <li>стоимость работы от 400 MDL</li>
+                                        <li>стоимость матрицы от 1150 MDL</li>
                                         <li>время ремонта от 1 часа</li>
                                     </ul>
                                     <p>
@@ -155,7 +155,7 @@
                                 <div class="carousel-caption">
                                     <h2>Чистка ноубука</h2>
                                     <ul class="list-inline list-unstyled">
-                                        <li>стоимость работы от 800 <i class="fa fa-rouble"></i></li>
+                                        <li>стоимость работы от 250 MDL</li>
                                         <li>время ремонта от 2 часов</li>
                                     </ul>
                                     <p>
@@ -175,7 +175,7 @@
                                 <div class="carousel-caption">
                                     <h2>Модернизация</h2>
                                     <ul class="list-inline list-unstyled">
-                                        <li>стоимость работы от 300 <i class="fa fa-rouble"></i></li>
+                                        <li>стоимость работы от 100 MDL</li>
                                     </ul>
                                     <p>
                                         Не хватает оперативной памяти, кончилось место на жёстком диске?
@@ -285,7 +285,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>1200</span> <i class="fa fa-rouble"></i>.
+                                                от <span>400</span> MDL.
                                             </td>
                                         </tr>
                                         <tr>
@@ -293,7 +293,7 @@
                                                 Стоимость матрицы
                                             </td>
                                             <td class = "time_service second_time_service">
-                                                от 3500 <i class="fa fa-rouble"></i>.
+                                                от 1150 MDL.
                                             </td>
                                         </tr>
                                     </table>
@@ -341,7 +341,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>800</span> <i class="fa fa-rouble"></i>.
+                                                от <span>250</span> MDL.
                                             </td>
                                         </tr>
                                     </table>
@@ -381,7 +381,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>300</span> <i class="fa fa-rouble"></i>.
+                                                от <span>100</span> MDL.
                                             </td>
                                         </tr>
                                     </table>
@@ -427,7 +427,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>300</span> <i class="fa fa-rouble"></i>.
+                                                от <span>100</span> MDL.
                                             </td>
                                         </tr>
                                         <tr>
@@ -435,7 +435,7 @@
                                                 Стоимость запчастей 
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от 1600 <i class="fa fa-rouble"></i>.
+                                                от 500 MDL.
                                             </td>
                                         </tr>
                                     </table>
@@ -479,7 +479,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>1300</span> <i class="fa fa-rouble"></i>.
+                                                от <span>400</span> MDL.
                                             </td>
                                         </tr>
                                     </table>
@@ -526,7 +526,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>2500</span> <i class="fa fa-rouble"></i>.
+                                                от <span>800</span> MDL.
                                             </td>
                                         </tr>
                                     </table>
@@ -570,7 +570,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>1500</span> <i class="fa fa-rouble"></i>.
+                                                от <span>500</span> MDL.
                                             </td>
                                         </tr>
                                         <tr>
@@ -578,7 +578,7 @@
                                                 Стоимость запчастей
                                             </td>
                                             <td class = "time_service second_time_service">
-                                                от 3600 <i class="fa fa-rouble"></i>.
+                                                от 1200 MDL.
                                             </td>
                                         </tr>
                                     </table>
@@ -623,7 +623,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>900</span> <i class="fa fa-rouble"></i>.
+                                                от <span>300</span> MDL.
                                             </td>
                                         </tr>
                                         <tr>
@@ -631,7 +631,7 @@
                                                 Стоимость запчастей
                                             </td>
                                             <td class = "time_service second_time_service">
-                                                от 1200 <i class="fa fa-rouble"></i>.
+                                                от 400 MDL.
                                             </td>
                                         </tr>
                                     </table>
@@ -678,7 +678,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>2500</span> <i class="fa fa-rouble"></i>.
+                                                от <span>800</span> MDL.
                                             </td>
                                         </tr>
                                     </table>
