--- a/remont-orgtehniki.html
+++ b/remont-orgtehniki.html
@@ -134,7 +134,7 @@
                                 <div class="carousel-caption">
                                     <h2>Прочистка печатающей головки принтера</h2>
                                     <ul class="list-inline list-unstyled">
-                                        <li>стоимость работы от 1000 <i class="fa fa-rouble"></i></li>
+                                        <li>стоимость работы от 300 MDL</li>
                                         <li>время ремонта от 3 дней</li>
                                     </ul>
                                     <p>
@@ -155,8 +155,8 @@
                                 <div class="carousel-caption">
                                     <h2>Замена ролика подачи бумаги</h2>
                                     <ul class="list-inline list-unstyled">
-                                        <li>стоимость работы от 800 <i class="fa fa-rouble"></i></li>
-                                        <li>стоимость запчасти от 200 <i class="fa fa-rouble"></i></li>
+                                        <li>стоимость работы от 250 MDL</li>
+                                        <li>стоимость запчасти от 60 MDL</li>
                                         <li>время ремонта от 1 дня</li>
                                     </ul>
                                     <p>
@@ -178,7 +178,7 @@
                                 <div class="carousel-caption">
                                     <h2>Замена термоплёнки</h2>
                                     <ul class="list-inline list-unstyled">
-                                        <li>стоимость ремонта от 1000 <i class="fa fa-rouble"></i></li>
+                                        <li>стоимость ремонта от 300 MDL</li>
                                         <li>время ремонта от 1 дня</li>
                                     </ul>
                                     <p>
@@ -289,7 +289,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>1000</span> <i class="fa fa-rouble"></i>.
+                                                от <span>300</span> MDL.
                                             </td>
                                         </tr>
                                     </table>
@@ -338,7 +338,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>1000</span> <i class="fa fa-rouble"></i>.
+                                                от <span>300</span> MDL.
                                             </td>
                                         </tr>
                                         <tr>
@@ -346,7 +346,7 @@
                                                 Стоимость запчастей 
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от 200 <i class="fa fa-rouble"></i>.
+                                                от 60 MDL.
                                             </td>
                                         </tr>
                                     </table>
@@ -397,7 +397,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>1000</span> <i class="fa fa-rouble"></i>.
+                                                от <span>300</span> MDL.
                                             </td>
                                         </tr>
                                     </table>
@@ -442,7 +442,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>350</span> <i class="fa fa-rouble"></i>.
+                                                от <span>120</span> MDL.
                                             </td>
                                         </tr>
                                     </table>
