--- a/remont-televizorov.html
+++ b/remont-televizorov.html
@@ -217,7 +217,7 @@
         <section id="listings">
             <div class="container">
                  <div class="section-title">
-                    <h2>РЕМОНТ ТЕЛЕВИЗИОРОВ</h2>
+                    <h2>РЕМОНТ ТЕЛЕВИЗОРОВ</h2>
 
                  </div> 
                 <div class="section-description">
