--- a/remont-televizorov.html
+++ b/remont-televizorov.html
@@ -175,7 +175,7 @@
                         <!-- Featured listing 3 -->
                         <div class="item">
                             <div class="col-sm-8 holder">
-                                <img class="img-responsive" src="img/rem/remont_din.png" alt="">
+                                <img class="img-responsive" src="img/rem/remont_tv_speaker.png" alt="">
                             </div>
                             <div class="col-sm-4">
                                 <div class="carousel-caption">
