--- a/remont-televizorov.html
+++ b/remont-televizorov.html
@@ -221,7 +221,7 @@
 
                  </div> 
                 <div class="section-description">
-                    <p>На дисплее цветные разводы и полосы? Экран не светится? Телевизор не вкл-ся? Механические повреждения, скачки напряжения и программные сбои – причины выхода из строя телевизоров. Экономьте время и деньги – обращайтесь в сервисный центр «Омега». Наши специалисты осуществляют <b>ремонт телевизоров в Чадыр-Лунге</b> больше 10 лет. Гарантия того, что работа будет выполнена в срок, – большой выбор запчастей в наличии.
+                    <p>На дисплее цветные разводы и полосы? Экран не светится? Телевизор не включается? Механические повреждения, скачки напряжения и программные сбои – причины выхода из строя телевизоров. Экономьте время и деньги – обращайтесь в сервисный центр «Омега». Наши специалисты осуществляют <b>ремонт телевизоров в Чадыр-Лунге</b> больше 10 лет. Гарантия того, что работа будет выполнена в срок, – большой выбор запчастей в наличии.
                     </p>
                     <p>
                     Сервис «Омега» осуществляет ремонт телевизоров всех моделей и брендов: Samsung, LG, Sony, Panasonic, Philips, Daewoo, Akira и многих других. 
