--- a/remont-televizorov.html
+++ b/remont-televizorov.html
@@ -272,17 +272,17 @@
                     <h3>Работаем со всеми видами TV:</h3>
                     <div class="modcontent clearfix">
                         <ul class="menu nav nav-pills menuu menuuu">
-                            <li class="item-0"><a href="http://remont-televizorov.ru/uslugi/3d"><img src="img/tv/3D.png" alt="3D"></a>
+                            <li class="item-0"><a href="uslugi/3d"><img src="img/tv/3D.png" alt="3D"></a>
                             </li>
-                            <li class="item-1"><a href="http://remont-televizorov.ru/uslugi/plazmennye"><img src="img/tv/plazma.png" alt="Плазменные"></a>
+                            <li class="item-1"><a href="uslugi/plazmennye"><img src="img/tv/plazma.png" alt="Плазменные"></a>
                             </li>
-                            <li class="item-2"><a href="http://remont-televizorov.ru/uslugi/led"><img src="img/tv/LED_TV.png" alt="LED ТВ"></a>
+                            <li class="item-2"><a href="uslugi/led"><img src="img/tv/LED_TV.png" alt="LED ТВ"></a>
                             </li>
-                            <li class="item-3"><a href="http://remont-televizorov.ru/uslugi/zhk"><img src="img/tv/JK.png" alt="ЖК (LCD)"></a>
+                            <li class="item-3"><a href="uslugi/zhk"><img src="img/tv/JK.png" alt="ЖК (LCD)"></a>
                             </li>
-                            <li class="item-4"><a href="http://remont-televizorov.ru/uslugi/oled"><img src="img/tv/OLED.png" alt="OLED"></a>
+                            <li class="item-4"><a href="uslugi/oled"><img src="img/tv/OLED.png" alt="OLED"></a>
                             </li>
-                            <li class="item-5"><a href="http://remont-televizorov.ru/uslugi/4k"><img src="img/tv/4K.png" alt="4k"></a>
+                            <li class="item-5"><a href="uslugi/4k"><img src="img/tv/4K.png" alt="4k"></a>
                             </li>
                         </ul>
                     </div>
